--- a/amogus.html
+++ b/amogus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl"><head>
+<html lang="pl">
 
 <body>
 
@@ -28,7 +28,6 @@
  ~ norbert gierczak
  <p><a href="norbert.html"><img src="https://avatars.akamai.steamstatic.com/33479a0b3008dd2453cdbb05f6e2f8aab1e2714c_full.jpg"></a></p>
 </div>
-
-
-
-</body></html>
+ 
+</body>
+</html>
