--- a/norbert.html
+++ b/norbert.html
@@ -1,5 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
+<head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
+<title>norberciuch</title>
+</head>
 
 <body>
 
@@ -11,7 +16,7 @@
 <a href="index.html">darmowe vbucks</a> | <a href="darmowevbucks.html">tu moja strona totalnie nie skopiowana :moyai:</a>
 </div>
 
-<h2 class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/YnBV7hWuzXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></h2>
+<h2 class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/YnBV7hWuzXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></h2>
 
 
 
@@ -19,8 +24,6 @@
  ~ norbert gierczak
 </div>
 
-
-
 </body>
-  
- </html>
+
+</html>
