--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
 <title>Index – Moja strona</title>
-<link id="chromealerabat-link" rel="stylesheet" type="text/css" href="chrome-extension://dacdinoicboceafielngnmjjplncljhj/content.css"></head>
+<link rel="stylesheet" type="text/css" href="style.css"></head>
 
 <body>
 
