--- a/darmowevbucks.html
+++ b/darmowevbucks.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
+<html lang="pl">
+    <div class="menu">
+        <a href="index.html">darmowe vbucks</a> | <a href="amogus.html">przepis na bigos
+        
+        </a>
+        </div>
+        
+  <head>
+     <meta charset="utf-8">
      <title> TYTUŁ </title>
+  </head>
   
-  
-  
+  <body>
      <header> MAGŁÓWEK STRONY </header>
      <section>
        <article> Wiktor Szwagierek </article>
        <article> klasa 1P  </article>
      </section>
      <footer> STOPKA STRONY </footer>
-  
-</body></html>
+  </body>
+</html>
