--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="menu">
-<a href="darmowevbucks.html">tu moja strona totalnie nie skopiowana :moyai:</a> | <a href="amogus.html">przepis na bigos</a>
+<a href="darmowevbucks.html"> jd 🗿 </a> | <a href="amogus.html">przepis na bigos</a>
 </div>
 
 <h2>dzien dobry darmowe vbucksy tu są </h2>
