--- a/amogus.html
+++ b/amogus.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="menu">
-<a href="index.html">darmowe vbucks</a> | <a href="darmowevbucks.html">tu moja strona totalnie nie skopiowana :moyai:</a>
+<a href="index.html">darmowe vbucks</a> | <a href="darmowevbucks.html"> jd 🗿 </a>
 </div>
 
 <h2></h2>
