--- a/norbert.html
+++ b/norbert.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="top">
-<h1>norbert tutaj jest :)</h1>
+<h1 class="center">norbert tutaj jest :)</h1>
 </div>
 
 <div class="menu">
