--- a/darmowevbucks.html
+++ b/darmowevbucks.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
     <div class="menu">
-        <a href="index.html">darmowe vbucks</a> | <a href="amogus.html">przepis na bigos
+        <link rel="stylesheet" href="style.css">
+    <h2 class="center">    <a href="index.html">darmowe vbucks</a> | <a href="amogus.html">przepis na bigos </h2>
         
         </a>
         </div>
