--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </div>
 
 <div class="menu">
-<h2 class="style.css"><a href="darmowevbucks.html"> jd 🗿 </a> | <a href="amogus.html">przepis na bigos</a> </h2>
+<h2 class="center"><a href="darmowevbucks.html"> jd 🗿 </a> | <a href="amogus.html">przepis na bigos</a> </h2>
 </div>
 
 <h2>dzien dobry darmowe vbucksy tu są </h2>
-<h2 class="style.css" ><img src="https://www.clipartmax.com/png/full/118-1181943_emoji-vikipedi-sunglasses-emoji-discord.png" width="100" height="100"> <img src="http://cdn.shopify.com/s/files/1/1061/1924/products/Call_Me_Hand_Emoji_Icon_ios10_grande.png?v=1571606090" width="100" height="100">
+<h2 class="center" ><img src="https://www.clipartmax.com/png/full/118-1181943_emoji-vikipedi-sunglasses-emoji-discord.png" width="100" height="100"> <img src="http://cdn.shopify.com/s/files/1/1061/1924/products/Call_Me_Hand_Emoji_Icon_ios10_grande.png?v=1571606090" width="100" height="100">
 </h2>
 
-  <h2 class="style.css"><p>witam witam, a więc pan chce darmowe vbucksy?</p> 
+  <h2 class="center"><p>witam witam, a więc pan chce darmowe vbucksy?</p> 
 <p>Okej a zatem music pan kliknąć ten przycisk <a href="darmowevbucks2.html">darmowe vbucks</a> </p> </h2>
 
 <div class="footer">
@@ -28,4 +28,5 @@
 
 
 
-</body></html>
+</body>
+</html>
