--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h2 class="center"><a href="darmowevbucks.html"> jd 🗿 </a> | <a href="amogus.html">przepis na bigos</a> </h2>
 </div>
 
-<h2>dzien dobry darmowe vbucksy tu są </h2>
+<h2 class="center" >dzien dobry darmowe vbucksy tu są </h2>
 <h2 class="center" ><img src="https://www.clipartmax.com/png/full/118-1181943_emoji-vikipedi-sunglasses-emoji-discord.png" width="100" height="100"> <img src="http://cdn.shopify.com/s/files/1/1061/1924/products/Call_Me_Hand_Emoji_Icon_ios10_grande.png?v=1571606090" width="100" height="100">
 </h2>
 
