--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 <p>Okej a zatem music pan kliknąć ten przycisk <a href="darmowevbucks2.html">darmowe vbucks</a> </p> </h2>
 
 <div class="footer">
-~ mariusz pudzianowski
- <iframe src="https://streamable.com/e/bxgg1j?autoplay=1" width="560" height="562" frameborder="0" allowfullscreen allow="autoplay"></iframe>
-</div>
+  ~ mariusz pudzianowski </div>
+<div> <iframe src="https://streamable.com/e/bxgg1j?autoplay=1&nocontrols=1" width="560" height="562" frameborder="0" allowfullscreen allow="autoplay"></iframe></div>
 
 
 
