--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
 
 
 
-<audio src="http://sndup.net/hcg3" autoplay="autoplay"  loop="loop" id="MusicPlayer">
+
+<audio src="http://sndup.net/hcg3" autoplay="autoplay" controls loop="loop" id="MusicPlayer">
 
 <embed src="http://sndup.net/hcg3" autoplay="true" width="450" height="300" name="MusicPlayer" id="MusicPlayer">
 
 </audio>
+
+
+
 
 
 
