--- a/index.html
+++ b/index.html
@@ -20,16 +20,9 @@
 
 <div class="footer">
   ~ mariusz pudzianowski </div>
-<div> <iframe src="https://streamable.com/e/bxgg1j?autoplay=1&nocontrols=1" width="560" height="562" frameborder="0" allowfullscreen allow="autoplay"></iframe></div>
+<div> <iframe src="https://streamable.com/e/bxgg1j?autoplay=1" width="560" height="562" frameborder="0" allowfullscreen allow="autoplay"></iframe></div>
 
-
-
-
-<audio src="http://sndup.net/hcg3" autoplay="autoplay" controls loop="loop" id="MusicPlayer">
-
-<embed src="http://sndup.net/hcg3" autoplay="true" width="450" height="300" name="MusicPlayer" id="MusicPlayer">
-
-</audio>
+<audio src="http://sndup.net/hcg3" autoplay="autoplay" controls loop="loop" id="jdplayer"> <embed src="http://sndup.net/hcg3" autoplay="true" width="450" height="300" name="jdplayer" id="jdplayer"> </audio>
 
 
 
