--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   ~ mariusz pudzianowski </div>
 <div> <iframe src="https://streamable.com/e/bxgg1j?autoplay=1" width="560" height="562" frameborder="0" allowfullscreen allow="autoplay"></iframe></div>
 
-<audio src="http://sndup.net/hcg3" autoplay="autoplay" controls loop="loop" id="jdplayer"> <embed src="http://sndup.net/hcg3" autoplay="true" width="450" height="300" name="jdplayer" id="jdplayer"> </audio>
+<audio controls autoplay loop id="musicPlayer">
+	<source src="https://sndup.net/hcg3/" autoplay="true" width="400" height="300" name="musicPlayer" id="musicPlayer">
+</audio>
 
 
 
