--- a/darmowevbucks2.html
+++ b/darmowevbucks2.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-   <p class="center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/yKQ_sQKBASM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </p>
+   <p class="center"><img src="https://imgur.com/NQinKJB" alt="rickroll"></p>
     <p class="center"><b>Nie ładnie tak darmowe vbucksy probowac dostać xDD</b></p>
+   <audio autoplay loop> <src="rickroll.mp3" </audio>
     
 </body>
 
