--- a/darmowevbucks2.html
+++ b/darmowevbucks2.html
@@ -10,7 +10,9 @@
 <body>
    <p class="center"><img src="https://imgur.com/NQinKJB" alt="rickroll"></p>
     <p class="center"><b>Nie ładnie tak darmowe vbucksy probowac dostać xDD</b></p>
-   <audio autoplay loop> <src="rickroll.mp3" </audio>
+ <audio autoplay loop>
+	<source src="rickroll.mp3">
+</audio>   
     
 </body>
 
