--- a/norbert.html
+++ b/norbert.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="menu">
-<h2 class="center"><a href="index.html">darmowe vbucks</a> | <a href="darmowevbucks.html"> jd 🗿 </a> | <a href="amogus.html"> przepis na bigos </a> </h2>
+<h2 class="center"><a href="darmowevbucks.html">darmowe vbucks</a> | <a href="jd.html"> jd 🗿 </a> | <a href="amogus.html"> przepis na bigos </a> </h2>
 </div>
 
 <h2 class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/YnBV7hWuzXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></h2>
