--- a/jd.html
+++ b/jd.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <div class="menu">
         <link rel="stylesheet" href="style.css">
-    <h2 class="center">    <a href="index.html">darmowe vbucks</a> | <a href="amogus.html">przepis na bigos </h2>
+    <h2 class="center">    <a href="darmowevbucks.html">darmowe vbucks</a> | <a href="amogus.html">przepis na bigos </h2>
         
         </a>
         </div>
