Update and rename darmowevbucks1.html to darmowevbucks.html

--- a/darmowevbucks.html
+++ b/darmowevbucks.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="menu">
-<h2 class="center"><a href="darmowevbucks.html"> jd 🗿 </a> | <a href="amogus.html">przepis na bigos</a> </h2>
+<h2 class="center"><a href="jd.html"> jd 🗿 </a> | <a href="amogus.html">przepis na bigos</a> </h2>
 </div>
 
 <h2 class="center" >dzien dobry darmowe vbucksy tu są </h2>
