--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
 <title>menu xD</title>
-<link rel="stylesheet" type="text/css" href="style.css"></head>
+<link rel="stylesheet" type="text/css" href="jd.css"></head>
 <body>
 <html>
    
