--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl"><head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="jd.css">
 <title>menu xD</title>
 <link rel="stylesheet" type="text/css" href="jd.css"></head>
 <body>
