--- a/amogus.html
+++ b/amogus.html
@@ -8,12 +8,10 @@
 </div>
 
 <div class="menu">
-<a href="darmowevbucks.html">darmowe vbucks</a> | <a href="jd.html"> jd 🗿 </a>
+<h2 class="center"><a href="darmowevbucks.html">darmowe vbucks</a> | <a href="jd.html"> jd 🗿 </a> </h2>
 </div>
 
-<h2></h2>
-
-<p>Przepis na bigos:</p>
+<h2 class="center"><p>Przepis na bigos:</p>
  <p> Mięso pokroić w kostkę. Cebulę pokroić w kosteczkę i zeszklić na oleju w dużym garnku.</p> 
  <p>   Dodać mięso i dokładnie je obsmażyć.</p>
  <p>   Wlać 2 szklanki gorącego bulionu lub wody z solą i pieprzem, zagotować. </p>
@@ -23,7 +21,7 @@
     <p>    Kiełbasę obrać ze skóry, pokroić w kostkę i podsmażyć na patelni. Dodać do kapusty i gotować przez ok. 30 minut. Pod koniec dodać koncentrat pomidorowy.</p>
     <p>    Mąkę podsmażyć na suchej patelni, gdy zacznie brązowieć dodać łyżkę masła i mieszać aż masło się rozpuści.</p>
     <p>    Trzymając patelnię na ogniu dodać stopniowo kilka łyżek kapusty cały czas mieszając. Przełożyć zawartość patelni z powrotem do garnka, wymieszać i zagotować.</p>
-
+ </h2>
 <div class="footer">
  ~ norbert gierczak
  <p><a href="norbert.html"><img src="https://avatars.akamai.steamstatic.com/33479a0b3008dd2453cdbb05f6e2f8aab1e2714c_full.jpg"></a></p>
