--- a/amogus.html
+++ b/amogus.html
@@ -10,18 +10,18 @@
 <div class="menu">
 <h2 class="center"><a href="darmowevbucks.html">darmowe vbucks</a> | <a href="jd.html"> jd 🗿 </a> </h2>
 </div>
-
-<p class="center"><p>Przepis na bigos:</p>
- <p> Mięso pokroić w kostkę. Cebulę pokroić w kosteczkę i zeszklić na oleju w dużym garnku.</p> 
- <p>   Dodać mięso i dokładnie je obsmażyć.</p>
- <p>   Wlać 2 szklanki gorącego bulionu lub wody z solą i pieprzem, zagotować. </p>
- <p>    Następnie dodać połamane suszone grzyby, przykryć, zmniejszyć ogień i gotować przez ok. 45 minut.</p>
- <p>    Dodać listek laurowy, ziela angielskie, kminek, majeranek, powidła śliwkowe lub posiekane śliwki, obrane i pokrojone w kosteczkę obrane jabłko i wymieszać.</p>
- <p>    Dodać odciśniętą kiszoną kapustę oraz wlać szklankę wody, wymieszać. Przykryć i gotować przez ok. 15 minut.</p>
-    <p>    Kiełbasę obrać ze skóry, pokroić w kostkę i podsmażyć na patelni. Dodać do kapusty i gotować przez ok. 30 minut. Pod koniec dodać koncentrat pomidorowy.</p>
-    <p>    Mąkę podsmażyć na suchej patelni, gdy zacznie brązowieć dodać łyżkę masła i mieszać aż masło się rozpuści.</p>
-    <p>    Trzymając patelnię na ogniu dodać stopniowo kilka łyżek kapusty cały czas mieszając. Przełożyć zawartość patelni z powrotem do garnka, wymieszać i zagotować.</p>
- </p>
+ 
+    <p class="center">    Przepis na bigos:</p>
+    <p class="center">    Mięso pokroić w kostkę. Cebulę pokroić w kosteczkę i zeszklić na oleju w dużym garnku.</p> 
+    <p class="center">    Dodać mięso i dokładnie je obsmażyć.</p>
+    <p class="center">    Wlać 2 szklanki gorącego bulionu lub wody z solą i pieprzem, zagotować. </p>
+    <p class="center">    Następnie dodać połamane suszone grzyby, przykryć, zmniejszyć ogień i gotować przez ok. 45 minut.</p>
+    <p class="center">    Dodać listek laurowy, ziela angielskie, kminek, majeranek, powidła śliwkowe lub posiekane śliwki, obrane i pokrojone w kosteczkę obrane jabłko i wymieszać.</p>
+    <p class="center">    Dodać odciśniętą kiszoną kapustę oraz wlać szklankę wody, wymieszać. Przykryć i gotować przez ok. 15 minut.</p>
+    <p class="center">    Kiełbasę obrać ze skóry, pokroić w kostkę i podsmażyć na patelni. Dodać do kapusty i gotować przez ok. 30 minut. Pod koniec dodać koncentrat pomidorowy.</p>
+    <p class="center">    Mąkę podsmażyć na suchej patelni, gdy zacznie brązowieć dodać łyżkę masła i mieszać aż masło się rozpuści.</p>
+    <p class="center">    Trzymając patelnię na ogniu dodać stopniowo kilka łyżek kapusty cały czas mieszając. Przełożyć zawartość patelni z powrotem do garnka, wymieszać i zagotować.</p>
+ 
 <div class="footer">
  ~ norbert gierczak
  <p><a href="norbert.html"><img src="https://avatars.akamai.steamstatic.com/33479a0b3008dd2453cdbb05f6e2f8aab1e2714c_full.jpg"></a></p>
