--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -7,7 +7,7 @@
 <div class="top">
 <h1 class="center">breaking bad</h1>
 </div>
-<h2 class="center"><iframe src="https://voe.sx/e/yfajdfcutn64" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe></h2>
+<h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
 <h2 class="center"><a href="breakingbad2.html">następny</a>
 </div>
