--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl"><head>
 <meta charset="utf-8">
+   <meta name="description" content="aaaaaaaaaaaaa jd"> 
+   <meta name="keywords" content="lubieplackijdjdjdjdjdj54634536"> 
 <link rel="stylesheet" href="jd.css">
 <title>menu xD</title>
 <link rel="stylesheet" type="text/css" href="jd.css"></head>
