--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -10,7 +10,7 @@
 <h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
 <h2 class="center"><a href="breakingbad2.html">następny</a>
- <script src="Adblock.js"></script>
+ <script src="breakingbad/Adblock.js"></script>
 
 </div>
 
