--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -12,6 +12,23 @@
 <h2 class="center"><a href="breakingbad2.html">następny</a>
 <a href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm?hl=pl" id="open-popup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png" width="100px"></a>
 
+ <script>
+(() => {
+	let id = document.getElementById("open-popup");
+	let popupWindow = null;
+	let windowSize = 'width=1000,height=600,left=220,top=150';
+
+	id.addEventListener("click", function(event){
+		let url = this.href;
+		if (popupWindow === null || popupWindow.closed) {
+			popupWindow = window.open(url, 'Adblock', windowSize);
+		} else {
+			popupWindow.focus();
+		}
+		event.preventDefault();
+	});
+})();
+</script>
 </div>
 
 <div class="footer">
