--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="dark.css">
  <title>1odcinek</title>
 <body>
 
