--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="dark.css">
  <title>1odcinek</title>
 	<div class="light">
 <body>
-	<p dir="rtl"> <button class="light" id="btn">toggle</button> </p> 
 <div class="top">
-<h1 class="center">breaking bad</h1>
+<h1 class="center">breaking bad</h1> <p dir="rtl"> <button class="light" id="btn">toggle</button> </p> 
 </div>
 <h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
