--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -2,10 +2,10 @@
 <html lang="pl">
 <link rel="stylesheet" href="style.css">
  <title>1odcinek</title>
-	<div class="light">
+
 <body>
 <div class="top">
-<h1 class="center">breaking bad</h1> <p dir="rtl"> <button class="light" id="btn">toggle</button> </p> 
+<h1 class="center">breaking bad</h1>
 </div>
 <h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
@@ -17,16 +17,8 @@
 
 
 </div>
-	</div>
-	<script>
-const btn = document.getElementById('btn');
-        btn.addEventListener('click', function () {
-            var elmWitchChange = document.getElementsByClassName('light')
-            for (var i = 0; i < elmWitchChange.length; i++) {
-                elmWitchChange[i].classList.toggle('dark')
-            }
-        })
-	</script>
+
+
 </body>
 </html>
 
