--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -5,7 +5,7 @@
 
 <body>
 <div class="top">
-<h1 class="center">breaking bad</h1>
+<h1 class="center">breaking bad</h1> <h4><button onclick="myFunction()"><img src="https://static.thenounproject.com/png/765894-200.png">> <h4>
 </div>
 <h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
@@ -17,6 +17,12 @@
 
 
 </div>
+ <script>
+function myFunction() {
+   var element = document.body;
+   element.classList.toggle("dark-mode");
+}
+</script>
 
 
 </body>
