--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -5,7 +5,7 @@
 
 <body>
 <div class="top">
-<h1 class="center">breaking bad</h1> <h4><switch onclick="myFunction()"><label class="switch"><input type="checkbox"><span class="slider round" class="switch input"></label> <h4>
+<h1 class="center">breaking bad</h1> <h4><class="switch" onclick="myFunction()"><label class="switch"><input type="checkbox"><span class="slider round" class="switch input"></label> <h4>
 </div>
 <h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
