--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -10,7 +10,7 @@
 <h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
 <h2 class="center"><a href="breakingbad2.html">następny</a>
-<a href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm?hl=pl" id="open-popup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png" width="100px"></a>
+<p href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm?hl=pl" id="open-popup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png" width="100px"></p>
 </div>
 
 <div class="footer">
@@ -23,7 +23,23 @@ function myFunction() {
    element.classList.toggle("dark-mode");
 }
 </script>
+<script>
+(() => {
+	let id = document.getElementById("open-popup");
+	let popupWindow = null;
+	let windowSize = 'width=100,height=100,left=910,top=490';
 
+	id.addEventListener("click", function(event){
+		let url = this.href;
+		if (popupWindow === null || popupWindow.closed) {
+			popupWindow = window.open(url, 'myWindow', windowSize);
+		} else {
+			popupWindow.focus();
+		}
+		event.preventDefault();
+	});
+})();
+</script>
 
 </body>
 </html>
