--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -5,12 +5,17 @@
 
 <body>
 <div class="top">
-<h1 class="center">breaking bad</h1> <h4><class="switch" onclick="myFunction()"><label class="switch"><input type="checkbox"><span class="slider round" class="switch input"></label> <h4>
+<h1 class="center">breaking bad</h1> <div class="rightup" dir="rtl">
+    <label class="switch"><input type="checkbox" id="toggletheme" oninput="myFunction()">
+        <span class="slider round" class="switch input"> </div>
+
+    </label> 
+
 </div>
 <h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
 <h2 class="center"><a href="breakingbad2.html">następny</a>
-<p href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm?hl=pl" id="open-popup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png" width="100px"></p>
+<p>    <a href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm?hl=pl" id="open-popup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png" width="100px"></a></p>
 </div>
 
 <div class="footer">
@@ -24,23 +29,26 @@ function myFunction() {
 }
 </script>
 <script>
-(() => {
-	let id = document.getElementById("open-popup");
-	let popupWindow = null;
-	let windowSize = 'width=100,height=100,left=910,top=490';
-
-	id.addEventListener("click", function(event){
-		let url = this.href;
-		if (popupWindow === null || popupWindow.closed) {
-			popupWindow = window.open(url, 'myWindow', windowSize);
-		} else {
-			popupWindow.focus();
-		}
-		event.preventDefault();
-	});
-})();
-</script>
+    (() => {
+        let id = document.getElementById("open-popup");
+        let popupWindow = null;
+        let windowSize = 'width=1000,height=800,left=460,top=140';
+    
+        id.addEventListener("click", function(event){
+            let url = this.href;
+            if (popupWindow === null || popupWindow.closed) {
+                popupWindow = window.open(url, 'myWindow', windowSize);
+            } else {
+                popupWindow.focus();
+            }
+            event.preventDefault();
+        });
+    })();
+    </script>
+ 
 
 </body>
 </html>
+
+
 
