--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -45,8 +45,36 @@ function myFunction() {
         });
     })();
     </script>
- 
+<Script>
+ const toggleBtn = document.getElementById("toggle-btn");
+const theme = document.getElementById("theme");
+let darkMode = localStorage.getItem("dark-mode");
 
+const enableDarkMode = () => {
+  theme.classList.add("dark-mode");
+  toggleBtn.classList.remove("toggletheme");
+  localStorage.setItem("dark-mode", "enabled");
+};
+
+const disableDarkMode = () => {
+  theme.classList.remove("dark-mode");
+  toggleBtn.classList.add("toggletheme");
+  localStorage.setItem("dark-mode", "disabled");
+};
+
+if (dark-Mode === "enabled") {
+  enableDarkMode();
+}
+
+toggleBtn.addEventListener("click", (e) => {
+  darkMode = localStorage.getItem("dark-mode"); 
+  if (dark-Mode === "disabled") {
+    enableDarkMode();
+  } else {
+    disableDarkMode();
+  }
+});
+</Script>
 </body>
 </html>
 
