--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -5,21 +5,14 @@
 
 <body>
 <div class="theme">
-<h1 class="center">breaking bad</h1>
+<h1 class="center">breaking bad
     <label class="switch"><input type="checkbox" id="toggle-btn" class="dark-mode-toggle">
-        <span class="slider round" class="switch input">
+        <span class="slider round" class="switch input"></label> </h1>
 <h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
 <div class="menu">
 <h2 class="center"><a href="breakingbad2.html">następny</a>
 <p>    <a href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm?hl=pl" id="open-popup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png" width="100px"></a></p>         
 </div>
-
-    </label> 
-<h2 class="center"><iframe src="https://userload.co/embed/877e7616b894/" scrolling="no" frameborder="0" width="700" height="430" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></h2>
-<div class="menu">
-<h2 class="center"><a href="breakingbad2.html">następny</a>
-<p>    <a href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm?hl=pl" id="open-popup"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png" width="100px"></a></p>
-
 <div class="footer">
 
 
