--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -4,7 +4,7 @@
  <title>1odcinek</title>
 
 <body>
-<div class="theme">
+<div id="theme">
 <h1 class="center">breaking bad
     <label class="switch"><input type="checkbox" id="toggle-btn" class="dark-mode-toggle">
         <span class="slider round" class="switch input"></label> </h1>
