--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -141,6 +141,8 @@ player.addEventListener('ended', function() {
   player.src = localStorage.getItem('lastVideo') || 'https://www.youtube.com/watch?v=M7lc1UVf-VE';
   document.querySelector('.title').textContent = localStorage.getItem('lastTitle') || 'Tytuł filmu';
 });
+  document.querySelector('.title').textContent = buttons[index].textContent;
+localStorage.setItem('lastTitle', document.querySelector('.title').textContent);
 </script>
 </body>
 </html>
