--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -143,6 +143,39 @@ player.addEventListener('ended', function() {
 });
   document.querySelector('.title').textContent = buttons[index].textContent;
 localStorage.setItem('lastTitle', document.querySelector('.title').textContent);
+function saveFilmTitles() {
+  // Get the input field where the user can enter film titles
+  let inputField = document.getElementById('film-title-input');
+  let filmTitle = inputField.value;
+
+  // Retrieve the filmTitles array from localStorage
+  let filmTitles = JSON.parse(localStorage.getItem('filmTitles')) || [];
+
+  // Add the film title to the filmTitles array
+  filmTitles.push(filmTitle);
+
+  // Save the updated filmTitles array to localStorage
+  localStorage.setItem('filmTitles', JSON.stringify(filmTitles));
+
+  // Clear the input field
+  inputField.value = '';
+
+  // Display the updated list of film titles
+  displayFilmTitles();
+}
+
+function displayFilmTitles() {
+  // Retrieve the filmTitles array from localStorage
+  let filmTitles = JSON.parse(localStorage.getItem('filmTitles')) || [];
+
+  // Loop through the filmTitles array and display each title
+  for (let i = 0; i < filmTitles.length; i++) {
+    let filmTitle = filmTitles[i];
+    let titleElement = document.createElement('li');
+    titleElement.innerText = filmTitle;
+    document.getElementById('film-titles').appendChild(titleElement);
+  }
+}
 </script>
 </body>
 </html>
