--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -133,6 +133,44 @@ showVideo(currentVideoIndex);
   document.addEventListener('DOMContentLoaded', function() {
   player.src = localStorage.getItem('lastVideo') || 'https://www.youtube.com/watch?v=M7lc1UVf-VE';
 });
+function saveFilmTitles() {
+  // Get the input fields where the user can enter the film title and class
+  let titleInput = document.getElementById('film-title-input');
+  let classInput = document.getElementById('film-class-input');
+  let filmTitle = titleInput.value;
+  let filmClass = classInput.value;
+
+  // Retrieve the filmTitles array from localStorage
+  let filmTitles = JSON.parse(localStorage.getItem('filmTitles')) || [];
+
+  // Add the film title and class to the filmTitles array as an object
+  filmTitles.push({ title: filmTitle, class: filmClass });
+
+  // Save the updated filmTitles array to localStorage
+  localStorage.setItem('filmTitles', JSON.stringify(filmTitles));
+
+  // Clear the input fields
+  titleInput.value = '';
+  classInput.value = '';
+
+  // Display the updated list of film titles
+  displayFilmTitles();
+}
+
+function displayFilmTitles() {
+  // Retrieve the filmTitles array from localStorage
+  let filmTitles = JSON.parse(localStorage.getItem('filmTitles')) || [];
+
+  // Loop through the filmTitles array and display each title and class
+  for (let i = 0; i < filmTitles.length; i++) {
+    let film = filmTitles[i];
+    let titleElement = document
+.createElement('li');
+titleElement.innerText = film.title;
+titleElement.className = film.class;
+document.getElementById('film-titles').appendChild(titleElement);
+}
+}
 </script>
 </body>
 </html>
