--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Breaking Bad</title>
     <!-- Ładowanie stylów CSS -->
-    <link rel="stylesheet" type="text/css" href="jd2137/breakingbad/style.css" />
+    <link rel="stylesheet" type="text/css" href="breakingbad/style.css" />
   </head>
   <body>
 <!-- Pop-up container -->
@@ -39,6 +39,6 @@
     <!-- Przyciski filmów -->
     <div id="movieButtons"></div>
     <!-- Ładowanie skryptu JavaScript -->
-    <script src="jd2137/breakingbad/script.js"></script>
+    <script src="breakingbad/script.js"></script>
   </body>
 </html>
