--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Breaking Bad</title>
     <!-- Ładowanie stylów CSS -->
-    <link rel="stylesheet" type="text/css" href="breakingbad/style.css" />
+    <link rel="stylesheet" type="text/css" href="/jd2137/breakingbad/style.css" />
   </head>
   <body>
 <!-- Pop-up container -->
