--- a/breakingbad/index.html
+++ b/breakingbad/index.html
@@ -39,6 +39,6 @@
     <!-- Przyciski filmów -->
     <div id="movieButtons"></div>
     <!-- Ładowanie skryptu JavaScript -->
-    <script src="breakingbad/script.js"></script>
+    <script src="/jd2137/breakingbad/script.js"></script>
   </body>
 </html>
